fixed responsiveness and alignment

--- a/src/CSS/TrainingC.css
+++ b/src/CSS/TrainingC.css
@@ -51,21 +51,46 @@
   #TC_CName {
     position: absolute;
     width: 78%;
-    top: 27%;
-    left: 17.7%;
+    top: 30%;
+    left: 19.7%;
     text-align: center;
-    font-size: 2.5rem;
+    font-size: 2rem;
     font-family: 'Montserrat', sans-serif;
     color : #3b3a3a;
+  }
+
+  @media only screen and (max-width: 1780px){
+    #TC_PTrained{
+      left: 18%;
+      font-size: 1rem !important;
+    }
+    #TC_TrianedBy{
+      font-size: 1rem !important;
+    }
+    #TC_Date{
+      font-size: 1rem !important;
+    }
+  }
+
+  @media only screen and (max-width: 1500px){
+    #TC_PTrained{
+      font-size: 0.8rem !important;
+    }
+    #TC_TrianedBy{
+      font-size: 0.8rem !important;
+    }
+    #TC_Date{
+      font-size: 0.8rem !important;
+    }
   }
   
   #TC_Date {
     position: absolute;
     width: 78%;
-    top: 73%;
+    top: 74%;
     left: 29.5%;
     text-align: left;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     font-family: 'Montserrat', sans-serif;
     color : #3b3a3a;
   }
@@ -73,10 +98,10 @@
   #TC_PTrained{
     position: absolute;
     width: 78%;
-    top: 73%;
+    top: 74%;
     left:18.4%;
     text-align: center;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     font-family: 'Montserrat', sans-serif;
     color : #3b3a3a;
 
@@ -85,10 +110,10 @@
   #TC_TrianedBy {
     position: absolute;
     width: 78%;
-    top: 73%;
+    top: 74%;
     left: 42.6%;
     text-align: center;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     font-family: 'Montserrat', sans-serif;
     color : #3b3a3a;
   }
